[metadata]
name = stactools-nalcms
version = attr: stactools.nalcms.__version__
description = (
    "Subpackage for working with North American Land Change Monitoring System data in stactools, "
    "a command line tool and Python library for working with STAC.")
long_description = file: README.md
long_description_content_type = text/markdown
author = stac-utils
author_email = stac@radiant.earth
url = https://github.com/stactools-packages/nalcms
project_urls =
    Documentation = https://stactools-nalcms.readthedocs.io/en/latest/
    Issues = https://github.com/stactools-packages/nalcms/issues
keywords =
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    pytz ~= 2021.1
    stactools == 0.2.1

[options.packages.find]
where = src
